--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.4.13"
+    "mongoose": "^5.4.13",
+    "react": "^16.8.2",
+    "react-router-dom": "^4.3.1"
   }
 }
