--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.4.13",
     "react": "^16.8.2",
-    "react-router-dom": "^4.3.1",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
   }
 }
